--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME=SIMPEG
-APP_ENV=produciton
+APP_ENV=local
 APP_KEY=base64:urmfkLPi4b9qrKxfdTY/eQVCPcV/4AG3RrKF/dasndk=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_URL=http://localhost/simpeg
 
 DB_CONNECTION=mysql
@@ -9,14 +9,14 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=simpeg
 DB_USERNAME=root
-DB_PASSWORD=
-
+DB_PASSWORD=ismailmrzk98
+ 
 DB1_CONNECTION=log
 DB1_HOST=127.0.0.1
 DB1_PORT=3306
 DB1_DATABASE=simpeg_log
 DB1_USERNAME=root
-DB1_PASSWORD=
+DB1_PASSWORD=ismailmrzk98
 
 REDIS_CLIENT=predis
 REDIS_HOST=127.0.0.1
